# BitCoin_Trade

./: .claudeignore  .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  requirements-ml.txt
.githooks/: README.md  pre-commit
agents/: team.yaml
config/: btc-trader.service  claude_desktop_config.office.sample.json
data/: cache.duckdb  experiments.db
docs/: agent-team-draft.md  cross_review_policy.md  harness_step6_gate_guide.md  lint_layer.md
infra/: mcp.example.yaml  mcp.upbit.yaml
output/: _monitor_tmp.txt  bata_v15_final_report.md  (+32 more)
services/: .env.example  pyproject.toml
services/alerting/: notifier.py
services/backtest/: engine.py  metrics.py  models.py  report.py
services/backtest/tests/: test_engine.py
services/common/: __init__.py  ccxt_utils.py  log_throttle.py  sd_notify.py
services/execution/: __init__.py  circuit_breaker.py  config.py  filter_stats.py  multi_trader.py  realtime_monitor.py  regime_switcher.py  scanner.py  telegram_bot.py  trader.py  upbit_client.py  vb_filters.py
services/experiment_tracker/: models.py  server.py  store.py
services/experiment_tracker/tests/: test_store.py
services/healthcheck/: runner.py
services/market_data/: cache.py  fetcher.py  models.py  server.py
services/market_data/tests/: test_fetcher.py
services/ml/: __init__.py  config.py  feature_store.py  features.py  inference.py  labeler.py  outcome_matcher.py  shadow.py  trainer.py
services/paper_trading/: __init__.py  runner.py  state.py  strategy.py  strategy_rsi_ema.py
services/strategies/: __init__.py  advanced.py
(+265 files in other folders)
