[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-trading-services"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "ccxt>=4.0.0",
    "duckdb>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
# ML 추론 전용 (AWS 운영 서버용 최소셋. 학습 의존성은 requirements-ml.txt)
ml = [
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "pyarrow>=15.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
